# dd2zipkin

./: Cargo.toml  Dockerfile  Makefile  compose.yaml
.github/workflows/: docker-publish.yml
snapshots/: dd2otel.json
src/: main.rs
