[package]
name = "dd2zipkin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rmp-serde = "1.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
